--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.4",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
